# Mali-G68-MP5Driver

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Cargo_userspace.toml  README.md  README_ANDROID.md  README_TAMADACHI.md  README_USERSPACE.md  build.rs  build_android.sh  build_userspace.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  opencode.yml
benches/: shader_compile.rs
examples/: eden_integration.rs  tamadachi_integration.rs
src/: lib.rs
src/cmd/: builder.rs  compute.rs  draw.rs  mod.rs  transfer.rs
src/compiler/: emulator_pass.rs  mod.rs  nir.rs  optimize.rs  valhall.rs
src/csf/: firmware.rs  mod.rs  queue.rs
src/device/: init.rs  mod.rs  queue.rs
src/drm/: mod.rs
src/emulator/: async_compute.rs  cache.rs  exynos1280_opt.rs  mod.rs  snapdragon_opt.rs  tamadachi_opt.rs
src/gpu/: info.rs  mod.rs  regs.rs  tiler.rs
src/mem/: bo.rs  mod.rs  pool.rs  slab.rs
src/mmu/: as_.rs  mod.rs
src/userspace/: context.rs  device.rs  memory.rs  mod.rs  renderer.rs
src/util/: hash.rs  mod.rs
src/vulkan/: buffer.rs  descriptor.rs  device.rs  image.rs  instance.rs  memory.rs  mod.rs  physical.rs  pipeline.rs  render_pass.rs  shader.rs  swapchain.rs  sync.rs
tests/integration/: basic.rs
